--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           fermyon_token: ${{ secrets.FERMYON_CLOUD_TOKEN }}
           variables: |-
-            gh_token=${{ secrets.GITHUB_TOKEN }}
+            gh_token=${{ secrets.GH_TOKEN }}
