--- a/spin.toml
+++ b/spin.toml
@@ -14,5 +14,5 @@ route = "/..."
 [component.build]
 command = "tinygo build -target=wasi -tags=purego -gc=leaking -no-debug -o main.wasm main.go"
 watch = ["**/*.go", "go.mod"]
-[component.variables]
+[component.config]
 gh_token = "{{ gh_token }}"
