--- a/spin.toml
+++ b/spin.toml
@@ -11,7 +11,7 @@ gh_token = { required = true }
 [[component]]
 id = "spin-plugin-release-bot"
 source = "main.wasm"
-allowed_outbound_hosts = ["https://api.github.com/*", "https://github.com/*"]
+allowed_outbound_hosts = ["https://api.github.com", "https://github.com"]
 [component.trigger]
 route = "/..."
 [component.build]
