--- a/spin.toml
+++ b/spin.toml
@@ -7,6 +7,8 @@ version = "0.1.1"
 
 [variables]
 gh_token = { required = true }
+upstream_spin_plugins_index_repo_name = { required = false, default = "" }
+upstream_spin_plugins_index_repo_owner = { required = false, default = "" }
 
 [[component]]
 id = "spin-plugin-release-bot"
@@ -19,3 +21,5 @@ command = "tinygo build -target=wasi -tags=purego -gc=leaking -no-debug -o main.
 watch = ["**/*.go", "go.mod"]
 [component.config]
 gh_token = "{{ gh_token }}"
+upstream_spin_plugins_index_repo_name = "{{ upstream_spin_plugins_index_repo_name }}"
+upstream_spin_plugins_index_repo_owner = "{{ upstream_spin_plugins_index_repo_owner }}"
