--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,7 +3,8 @@ on:
   pull_request:
     branches: ["main"]
     types: ["opened", "synchronize", "reopened", "closed"]
-
+permissions:
+  pull-requests: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -39,4 +40,3 @@ jobs:
             gh_token=${{ secrets.GH_TOKEN }}
             upstream_spin_plugins_index_repo_name=spin-plugins-test-upstream
             upstream_spin_plugins_index_repo_owner=rajatjindal
-            
